--- a/src/pug/includes/modules/header.pug
+++ b/src/pug/includes/modules/header.pug
@@ -1,6 +1,26 @@
 header
-  .container
   div.background
   div.bg-gradient
-    div.bg-effects
-      img(src="../assets/img/gradient-effect.png")
+    .container
+      .header-container
+        .header-logo
+          img(src="../assets/img/logo.png")
+        .header-content
+          .header-button
+            button.button-src
+              .src-icon
+                img(src="../assets/img/search-icon.png")
+              .src-desc Search
+            button.button-collection
+              .collection-desc Collection
+              .array
+                .button-array
+          .header-title
+            h1.title
+              span.black-color Summer
+              span.white-color  Collection
+            h3.sale
+              span.vellow-color 25%
+              span.white-color  OFF
+  div.bg-effects
+    img(src="../assets/img/gradient-effect.png")
