--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -7,12 +7,12 @@ block variables
 
 block content
 	section
-		.aaa jhdjghd
-		.container
-			+item('item title', 'item descr')
-			+item('item title', 'item descr')
-			+item('item title', 'item descr')
-			p Lorem
+		//.aaa jhdjghd
+		//.container
+		//	+item('item title', 'item descr')
+		//	+item('item title', 'item descr')
+		//	+item('item title', 'item descr')
+		//	p Lorem
 	example-component
 
 block script
