--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -71,12 +71,16 @@ section, .section {
   flex-direction: column;
   min-height: 100vh;
 }
+header {
+  width: 100%;
+  position: relative;
+}
 
 .container {
   width: 100%;
   flex: 0 0 auto;
   display: flex;
-  position: relative;
+  //position: relative;
   margin: 0 auto;
   //max-width: $desktopWidth;
   @media screen and (max-width: $smDesktopWidth) {
