--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -31,9 +31,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-*, *:before, *:after { box-sizing: border-box; }
+* {
+  box-sizing: border-box;
 
-h1, h2, h3, h4, h5, h6 { margin: 0; }
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  font-family: "Roboto";
+}
 
 a { text-decoration: none; }
 
@@ -69,7 +75,7 @@ section, .section {
 .content-wrapper {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  //min-height: 100vh;
 }
 header {
   width: 100%;
@@ -77,15 +83,16 @@ header {
 }
 
 .container {
-  width: 100%;
+  //width: 100%;
   flex: 0 0 auto;
   display: flex;
   //position: relative;
   margin: 0 auto;
   //max-width: $desktopWidth;
-  @media screen and (max-width: $smDesktopWidth) {
-    //max-width: $tableWidth;
-  }
+  //@media screen and (max-width: $DesktopWidth) {
+  //  //max-width: $tableWidth;
+  //  width: 100%;
+  //}
   @media screen and (max-width: $tableWidth) {
     //max-width: $phoneWidth;
   }
