--- a/src/pug/includes/modules/header.pug
+++ b/src/pug/includes/modules/header.pug
@@ -1,26 +1,40 @@
 header
-  div.background
-  div.bg-gradient
-    .container
-      .header-container
-        .header-logo
-          img(src="../assets/img/logo.png")
-        .header-content
-          .header-button
-            button.button-src
-              .src-icon
-                img(src="../assets/img/search-icon.png")
-              .src-desc Search
-            button.button-collection
-              .collection-desc Collection
-              .array
-                .button-array
-          .header-title
-            h1.title
-              span.black-color Summer
-              span.white-color  Collection
-            h3.sale
-              span.vellow-color 25%
-              span.white-color  OFF
-  div.bg-effects
-    img(src="../assets/img/gradient-effect.png")
+  .background
+    div.bg-image
+    div.bg-gradient
+    div.bg-effects
+      img(src="../assets/img/gradient-effect.png")
+  .container
+    .header-container
+      .header-logo
+        h1.logo Big Shop
+      .buttons
+        .header-button
+          div.src-icon
+            img(src="../assets/img/search-icon.png")
+          input(type="search", placeholder="Search").button-src
+          button.button-collection
+            .collection-desc Collection
+            .array
+              .button-array
+      .header-content
+        .header-title
+          h1.title
+            span.black-color Summer
+            span.white-color  Collection
+          h3.sale
+            span.yellow-color 25%
+            span.white-color  OFF
+        button.details
+          .details-desc Details
+          .details-arrow
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="9" viewBox="0 0 18 9">
+            <defs>
+            <style> .cls-1 {fill-rule: evenodd;}
+            </style>
+            </defs>
+            <path id="_" data-name="" class="cls-1" d="M17.257,4.31L13.4,0.795a0.323,0.323,0,0,0-.352-0.05,0.291,0.291,0,0,0-.191.291v2.25H0.321A0.309,0.309,0,0,0,0,3.607V5.536a0.309,0.309,0,0,0,.321.321H12.857v2.25a0.3,0.3,0,0,0,.191.291,0.313,0.313,0,0,0,.352-0.06l3.857-3.556a0.329,0.329,0,0,0,.1-0.241,0.318,0.318,0,0,0-.1-0.231h0Z"/>
+            </svg>
+
+
+
