--- a/src/assets/scss/blocks/header.scss
+++ b/src/assets/scss/blocks/header.scss
@@ -1,6 +1,13 @@
 // header style
-
 .background {
+	position: absolute;
+	width: 100%;
+	top: 0;
+	left: 0;
+	z-index: -1;
+}
+
+.bg-image {
 	position: absolute;
 	width: 100%;
 	height: 1000px;
@@ -15,7 +22,7 @@
 	height: 1055px;
 	max-height: 1055px;
 	top: 0;
-	background: linear-gradient(204.7deg, rgba(#aa55f3, 0.5) 27%, rgba(#1100ff, 0.5) 59%, transparent 59%);
+	background: linear-gradient(204.7deg, rgba(#aa55f3, 0.5) 27%, rgba(#1100ff, 0.5) 58%, transparent 58%);
 	//opacity: 0.5;
 	background-blend-mode: overlay;
 	transform-origin: center center;
@@ -26,21 +33,59 @@
 	position: absolute;
 }
 .container {
-	padding: 80px 215px;
+	width: 1250px;
+	padding: 80px 40px;
+	margin: 0 auto;
 	opacity: 1;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+	row-gap: 185px;
+
+	@media screen and (max-width: $desktopWidth) {
+		//max-width: $tableWidth;
+		width: 100%;
+	}
 }
 .header-container {
 	width: 100%;
-	display: flex;
-	background-blend-mode: normal;
-	justify-content: space-between;
+	display: grid;
+	grid-template-areas: "logo button" "logo content";
+	grid-template-columns: 45% 45%;
+	grid-column-gap: 10%;
+	grid-template-rows: 1fr 12fr;
+	grid-row-gap: 5%;
+	//background-blend-mode: normal;
+	//justify-content: space-between;
 }
 .header-content {
-	width: (525 / 1170 * 100%);
+	//width: 44%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
+	row-gap: 10%
 }
+
 .header-logo {
 	z-index: 5;
-
+	grid-area: logo;
+}
+.logo {
+	font-size: 40px;
+	background-color: #ffffff;
+	font-weight: 500;
+	//background: rgb(255,255,255);
+	background: linear-gradient(312deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 21%, rgba(255,233,23,1) 24%, rgba(255,233,23,1) 42%, rgba(255,255,255,1) 45%, rgba(255,255,255,1) 59%, rgba(255,233,23,1) 62%, rgba(255,233,23,1) 79%, rgba(255,255,255,1) 81%, rgba(255,255,255,1) 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	display: inline-block;
+}
+.buttons {
+	grid-area: button;
+	display: flex;
+	align-items: flex-start;
+	justify-content: flex-end;
 }
 .header-button {
 	display: flex;
@@ -49,13 +94,22 @@
 	opacity: 1;
 	max-width: 500px;
 	border-radius: 35px;
-
+	box-shadow: 0 5px 25px 5px rgb(179, 158, 241);
+	//cursor: pointer;
 }
 .button-src {
-	display: flex;
-	align-items: center;
-	min-width: 185px;
+	width: 110px;
+	//align-items: center;
+	position: relative;
+	border-right: 1px solid #e0e0e0;
 	background: none;
+
+	padding: 10px 0;
+	color: black;
+	opacity: 1;
+	&:focus::-webkit-input-placeholder {
+		color: transparent;
+	}
 }
 .button-array {
 	width: 10px;
@@ -66,14 +120,13 @@
 
 }
 .src-icon {
-	padding: 14px 30px;
+	padding: 14px 24px;
 }
 .src-desc {
-	//white-space: nowrap;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	padding-right: 35px;
-	border-right: 1px solid #e0e0e0;
+	//border-right: 1px solid #e0e0e0;
 }
 .array {
 	padding: 27px 30px;
@@ -84,20 +137,54 @@
 	display: flex;
 	align-items: center;
 	background: none;
+	cursor: pointer;
+	//border-left: 1px solid #e0e0e0;
 }
 .collection-desc {
 	padding-left: 30px;
 	padding-top: 10px;
 	padding-bottom: 10px;
-	//white-space: nowrap;
+}
+.hader-content {
+	grid-area: content;
 }
 h1.title {
 	font-family: "Roboto";
 	font-size: 115px;
 	line-height: 120px;
 	font-weight: 700;
-
-	.white-color {
-		color: #ffffff;
-	}
+}
+h3.sale {
+	font-family: "Roboto";
+	font-size: 50px;
+	font-weight:500;
+}
+.white-color {
+	color: #ffffff;
+}
+.yellow-color {
+	color: #fbf934;
+}
+.details {
+	min-width: 200px;
+	min-height: 60px;
+	font-family: "Open Sans";
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 13px 45px;
+	background-color: #ffffff;
+	border-radius: 35px;
+	font-size: 20px;
+	font-weight: 600;
+	column-gap: 15px;
+	box-shadow: 0px 5px 25px 5px rgba(189, 227, 239, 0.6);
+	cursor: pointer;
+}
+.details-arrow {
+	color: #7048e2;
+	width: 20px;
+}
+.details-arrow path {
+	fill: #7048e2;
 }
