--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -1,5 +1,5 @@
 // Font
-$mainFont                : "Open Sans";;
+$mainFont                : "Open Sans";
 
 // Size
 $mainFontColor           : #101010;
