--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -10,12 +10,11 @@ html(lang='en')
     block head
 
   body(class=pageClass)
-
     .wrapper
-      #app
-        include ../includes/modules/header
-        .content-wrapper
-          block content
-        include ../includes/modules/footer
+      include ../includes/modules/header
+      main.content-wrapper
+        block content
+        block brands-presentation
+      include ../includes/modules/footer
 
     block script
