--- a/src/assets/scss/blocks/header.scss
+++ b/src/assets/scss/blocks/header.scss
@@ -1,4 +1,9 @@
 // header style
+header {
+	width: 100%;
+	position: relative;
+}
+
 .background {
 	position: absolute;
 	width: 100%;
@@ -55,11 +60,8 @@
 	grid-column-gap: 10%;
 	grid-template-rows: 1fr 12fr;
 	grid-row-gap: 5%;
-	//background-blend-mode: normal;
-	//justify-content: space-between;
 }
 .header-content {
-	//width: 44%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -75,7 +77,7 @@
 	font-size: 40px;
 	background-color: #ffffff;
 	font-weight: 500;
-	//background: rgb(255,255,255);
+	font-family: "Roboto";
 	background: linear-gradient(312deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 21%, rgba(255,233,23,1) 24%, rgba(255,233,23,1) 42%, rgba(255,255,255,1) 45%, rgba(255,255,255,1) 59%, rgba(255,233,23,1) 62%, rgba(255,233,23,1) 79%, rgba(255,255,255,1) 81%, rgba(255,255,255,1) 100%);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
@@ -95,11 +97,9 @@
 	max-width: 500px;
 	border-radius: 35px;
 	box-shadow: 0 5px 25px 5px rgb(179, 158, 241);
-	//cursor: pointer;
 }
 .button-src {
 	width: 110px;
-	//align-items: center;
 	position: relative;
 	border-right: 1px solid #e0e0e0;
 	background: none;
@@ -126,7 +126,6 @@
 	padding-top: 10px;
 	padding-bottom: 10px;
 	padding-right: 35px;
-	//border-right: 1px solid #e0e0e0;
 }
 .array {
 	padding: 27px 30px;
@@ -138,7 +137,6 @@
 	align-items: center;
 	background: none;
 	cursor: pointer;
-	//border-left: 1px solid #e0e0e0;
 }
 .collection-desc {
 	padding-left: 30px;
