--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -13,8 +13,9 @@ html(lang='en')
     .wrapper
       include ../includes/modules/header
       main.content-wrapper
-        block content
+        block contentBags
         block brands-presentation
+        block contentWatch
       include ../includes/modules/footer
 
     block script
