--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,6 +4,8 @@
 @import "utils/fonts";
 @import "utils/reset";
 @import "blocks/header";
+@import "blocks/footer";
+@import "blocks/social";
 
 html {
   line-height: $mainLineHeight;
@@ -48,20 +50,6 @@ ul, li {
   list-style-type: none;
 }
 
-//section, .section {
-//  position: relative;
-//  padding: 40px 0;
-//  @media screen and (max-width: $desktopWidth) {
-//    padding: 36px 0;
-//  }
-//  @media screen and (max-width: $desktopWidth) {
-//    padding: 28px 0;
-//  }
-//  @media screen and (max-width: $desktopWidth) {
-//    padding: 20px 0;
-//  }
-//}
-
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -71,9 +59,13 @@ ul, li {
   position: relative;
 }
 
+//////////////////////////
+//     Block trend      //
+//////////////////////////
+
 .trend {
   width: 1380px;
-  padding: 75px 100px 130px;
+  padding: 75px 100px 140px;
   background: #ffffff;
   box-shadow: 5px 5px 50px 5px rgba(237, 235, 253, 0.75);
   display: flex;
@@ -96,11 +88,15 @@ ul, li {
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 60px;
 }
+
+/////////////////////
+//  Product card   //
+/////////////////////
+
 .product-card {
   display: flex;
   flex-direction: column;
   align-items: center;
-  //row-gap: 20px;
   justify-content: space-between;
   padding: 56px 30px;
   position: relative;
@@ -112,7 +108,6 @@ ul, li {
     padding-top: 46px;
   }
   &:hover>button, &:hover>.likes, &:hover>.commits {
-    //display: block;
     opacity: 1;
     transition: all .2s;
   }
@@ -123,10 +118,7 @@ ul, li {
 .product-img {
   width: 245px;
   height: 245px;
-  //background-repeat: no-repeat;
-  //background-size: contain;
-  //background-position: center center;
-  //background-repeat: no-repeat;
+
   img {
     width: inherit;
     height: inherit;
@@ -147,7 +139,6 @@ ul, li {
 }
 
 .add-to-cart {
-  //display: none;
   opacity: 0;
   position: absolute;
   height: 60px;
@@ -207,6 +198,158 @@ ul, li {
   font-size: 14px;
   column-gap: 5px;
   cursor: pointer;
+}
+
+////////////////////////////
+//   Presentation block   //
+////////////////////////////
+
+#presentation {
+  width: 100%;
+
+  .container {
+    padding: 40px 0 75px 40px;
+    position: relative;
+  }
+}
+
+.presentation-container {
+  display: flex;
+  //grid-template-areas: "title img" "desc img";
+  //grid-template-columns: 45% 53%;
+  grid-column-gap: 2%;
+}
+.presentation-desc {
+  width: 42%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  row-gap: 20px;
+  //margin-bottom: 35px;
+}
+
+.presentation-title h3 {
+  font-size: 50px;
+  line-height: 1;
+  font-weight: 700;
+  color: #333333;
+  //grid-area: title;
+}
+.brand-title {
+
+  h4 {
+    font-size: 25px;
+    line-height: 34px;
+    //line-height: 1;
+    color: #333333;
+  }
+  a {
+    color: #8d83f9;
+  }
+  //grid-area: desc;
+}
+.brand-desc {
+  color: #888888;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: left;
+  //margin-top: 20px;
+  //padding: 25px 0;
+}
+
+.presentation-img {
+  width: 53%;
+  position: relative;
+  min-height: 750px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  //margin-top: 56px;
+
+  img {
+    //box-shadow: -5px 25px 25px 10px rgba(68, 77, 84, 0.2);
+  }
+
+  //grid-area: img;
+}
+
+.bg-img {
+  width: 370px;
+  height: 705px;
+  background: url("../../../src/assets/img/phone.png");
+  background-repeat: no-repeat;
+  position: absolute;
+  left: 145px;
+  top: 75px;
+}
+
+.bg-circle {
+  width: 402px;
+  height: 402px;
+  background: url("../../../src/assets/img/circle.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  z-index: -1;
+}
+
+///////////////////////////
+//    Showcase Menu      //
+///////////////////////////
+
+#trendly-watch {
+  row-gap: 0;
+  padding-bottom: 75px;
+
+  .trend-content {
+    margin-top: 60px;
+  }
+
+  .product-img {
+    width: 220px;
+    height: 220px;
+  }
+}
+
+.showcase-nav {
+  width: 100%;
+  margin-top: 87px;
+  max-width: 1100px;
+  height: 65px;
+  border-radius: 35px;
+  box-shadow: 0px 0px 95px 50px rgba(239, 239, 240, 0.75);
+  display: flex;
+  //justify-content: space-around;
+  align-items: center;
+}
+
+.showcase-list {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.showcase-item a {
+  font-family: "Open Sans";
+  font-size: 15px;
+  font-weight: 600;
+  color: #000000;
+  padding: 15px 15px;
+  transition: all .2s;
+
+  &:hover {
+    color: #b394fa;
+  }
+
+  &.active {
+    color: #b394fa;
+    font-size: 20px;
+    text-shadow:-1px 9px 5px #d5c8f7;
+    //opacity: 1.2;
+  }
 }
 
 
