--- a/src/assets/scss/blocks/footer.scss
+++ b/src/assets/scss/blocks/footer.scss
@@ -5,6 +5,10 @@
 
 }
 
+/////////////////////////
+//     Newsletter      //
+/////////////////////////
+
 .newsletter {
 	width:  100%;
 	height: 420px;
@@ -31,23 +35,24 @@
 }
 .newsletter-title {
 	position: relative;
+
 	width: 100%;
 
 	.title {
 		font-size: 50px;
-		//width: 100%;
 		font-weight: 600;
-		color: #ffffff;
+		color: $default-color;
 		text-align: center;
-
+		max-width: 1100px;
+		margin: 0 auto;
+		white-space: nowrap;
 	}
 	.back-title {
-		//font-family: "Miriad Pro";
 		width: 100%;
 		font-size: 150px;
 		line-height: 100%;
 		font-weight: 900;
-		color: #ffffff;
+		color: $default-color;
 		opacity: 0.1;
 		position: absolute;
 		text-align: center;
@@ -58,12 +63,11 @@
 	width: 845px;
 	height: 75px;
 	border-radius: 40px;
-	background: #ffffff;
+	background: $default-color;
 	display: flex;
 	justify-content: space-between;
 	padding: 6px 6px 6px 23px;
 	font-size: 20px;
-
 	font-family: "Open Sans";
 }
 
@@ -81,7 +85,7 @@
 .email-btn {
 	font-family: "Open Sans";
 	font-weight: 500;
-	color: #ffffff;
+	color: $default-color;
 	background: linear-gradient(237deg, rgb(161, 101, 244), rgb(140, 132, 249) 100%);
 	min-width: 200px;
 	max-width: 350px;
@@ -91,9 +95,20 @@
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	cursor: pointer;
+	transition: all $transitionTime;
+
+	&:hover {
+		opacity: 0.85;
+	}
 }
 
+//////////////////////////
+//     Footer Nav       //
+//////////////////////////
+
 .foot-content {
+	width: 80%;
+	margin: 0 auto;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -104,10 +119,16 @@
 .categories-list {
 	display: flex;
 	justify-content: center;
+	align-items:center;
 	column-gap: 50px;
 }
 .categories-item {
+	padding: 10px;
+	cursor: pointer;
+	max-width: 100px;
+
 	a {
+		text-align: center;
 		font-size: 18px;
 		font-weight: 600;
 		color: #404040;
@@ -118,6 +139,7 @@
 	}
 }
 .foot-title {
+	max-width: 80%;
 
 	.title {
 		font-family: "Roboto";
@@ -125,6 +147,11 @@
 		font-weight: 500;
 	}
 }
+
+/////////////////////////
+//       Copyright     //
+/////////////////////////
+
 .copyright {
 	width: 100%;
 	height: 65px;
