--- a/src/assets/scss/blocks/header.scss
+++ b/src/assets/scss/blocks/header.scss
@@ -1,4 +1,6 @@
-// header style
+//    header style   //
+///////////////////////
+
 header {
 	width: 100%;
 	position: relative;
@@ -7,19 +9,19 @@ header {
 .background {
 	position: absolute;
 	width: 100%;
+	height: 100%;
 	top: 0;
 	left: 0;
 	z-index: -1;
 }
 
 .bg-image {
-	position: absolute;
-	width: 100%;
-	height: 1000px;
+	position: relative;
+	width: 55%;
 	top: 55px;
-	background-image: url("../../../src/assets/img/face.png");
 	background-size: contain;
 	background-repeat: no-repeat;
+	z-index: -1;
 }
 .bg-gradient {
 	position: absolute;
@@ -28,54 +30,51 @@ header {
 	max-height: 1055px;
 	top: 0;
 	background: linear-gradient(204.7deg, rgba(#aa55f3, 0.5) 27%, rgba(#1100ff, 0.5) 58%, transparent 58%);
-	//opacity: 0.5;
 	background-blend-mode: overlay;
 	transform-origin: center center;
-
-
 }
 .bg-effects {
 	position: absolute;
 }
+
 .container {
-	width: 1250px;
+	position: absolute;
+	width: (1250 / 1600 * 100%);
+	height: 100%;
 	padding: 80px 40px;
 	margin: 0 auto;
 	opacity: 1;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	//flex-direction: column;
-	//align-items: flex-end;
-	//row-gap: 185px;
-
-	@media screen and (max-width: $desktopWidth) {
-		//max-width: $tableWidth;
-		width: 100%;
-	}
+	top: 0;
+	left: (174 / 1600 * 100%);
 }
 .header-container {
 	width: 100%;
-	display: grid;
-	grid-template-areas: "logo button" "logo content";
-	grid-template-columns: 45% 45%;
-	grid-column-gap: 10%;
-	grid-template-rows: 1fr 12fr;
-	grid-row-gap: 5%;
 }
 .header-content {
 	display: flex;
+	height: 100%;
 	flex-direction: column;
 	justify-content: center;
 	align-items: flex-start;
-	row-gap: 10%
+	row-gap: 10%;
+	width: 44%;
+	margin-left: auto;
+}
+.header-logo-row {
+	display: flex;
+	justify-content: space-between;
 }
 
 .header-logo {
 	z-index: 5;
-	grid-area: logo;
 }
 .logo {
 	font-size: 40px;
-	background-color: #ffffff;
+	margin-top: -10px;
+	background-color: $default-color;
 	font-weight: 500;
 	font-family: "Roboto";
 	background: linear-gradient(312deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 21%, rgba(255,233,23,1) 24%, rgba(255,233,23,1) 42%, rgba(255,255,255,1) 45%, rgba(255,255,255,1) 59%, rgba(255,233,23,1) 62%, rgba(255,233,23,1) 79%, rgba(255,255,255,1) 81%, rgba(255,255,255,1) 100%);
@@ -84,7 +83,6 @@ header {
 	display: inline-block;
 }
 .buttons {
-	grid-area: button;
 	display: flex;
 	align-items: flex-start;
 	justify-content: flex-end;
@@ -92,21 +90,32 @@ header {
 .header-button {
 	display: flex;
 	align-items: center;
-	background: #fff;
+	background: $default-color;
 	opacity: 1;
-	max-width: 500px;
+	max-width: 550px;
 	border-radius: 35px;
 	box-shadow: 0 5px 25px 5px rgb(179, 158, 241);
+	padding: 12px;
+}
+
+.source {
+	display: flex;
 }
 .button-src {
 	width: 110px;
 	position: relative;
 	border-right: 1px solid #e0e0e0;
 	background: none;
-
-	padding: 10px 0;
+	font-size: 18px;
+	font-weight: 600;
+	padding: 1px 0;
 	color: black;
 	opacity: 1;
+
+	&:focus, &:active {
+		width: 250px;
+	}
+
 	&:focus::-webkit-input-placeholder {
 		color: transparent;
 	}
@@ -117,10 +126,10 @@ header {
 	border-bottom: 2px solid black;
 	border-right: 2px solid black;
 	transform: rotate(45deg);
-
 }
 .src-icon {
-	padding: 14px 24px;
+	margin-right: 5px;
+	padding: 7px 7px 7px 16px;
 }
 .src-desc {
 	padding-top: 10px;
@@ -128,37 +137,86 @@ header {
 	padding-right: 35px;
 }
 .array {
-	padding: 27px 30px;
+	padding: 7px;
 }
 .button-collection {
+	position: relative;
 	min-width: 185px;
 	max-width: 250px;
 	display: flex;
+	justify-content: space-evenly;
 	align-items: center;
 	background: none;
 	cursor: pointer;
 }
+.drop-menu {
+	position: absolute;
+	top: 160%;
+	background: $default-color;
+	box-shadow: 0px 5px 23.75px 1.25px rgba(189, 227, 239, 0.75);
+	border-radius: 13px;
+	transform: scaleY(0);
+}
+
+.drop-list {
+	min-width: 185px;
+	max-width: 250px;
+	display: flex;
+	row-gap: 3px;
+	flex-direction: column;
+	align-items: flex-start;
+	padding: 8px;
+}
+.drop-item {
+	display: flex;
+	border-radius: 10px;
+	text-align: left;
+	width: 100%;
+	transition: all $transitionTime;
+
+	a {
+		padding: 10px 15px;
+		font-size: 18px;
+		width: 100%;
+		color: #404040;
+	}
+
+	&:hover {
+		color: #a165f4;
+		background: linear-gradient(237deg,#a165f4,#8c84f9 100%);
+
+		a {
+			color: $default-color;
+		}
+	}
+}
 .collection-desc {
-	padding-left: 30px;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-left: 27px;
+	padding-top: 7px;
+	padding-bottom: 7px;
+	padding-right: 15px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	font-size: 18px;
+	font-weight: 600;
 }
-.hader-content {
-	grid-area: content;
-}
+
+
 h1.title {
 	font-family: "Roboto";
 	font-size: 115px;
 	line-height: 120px;
 	font-weight: 700;
+
 }
-h3.sale {
+p.sale {
 	font-family: "Roboto";
 	font-size: 50px;
 	font-weight:500;
 }
 .white-color {
-	color: #ffffff;
+	color: $default-color;
 }
 .yellow-color {
 	color: #fbf934;
@@ -171,13 +229,26 @@ h3.sale {
 	justify-content: center;
 	align-items: center;
 	padding: 13px 45px;
-	background-color: #ffffff;
+	background-color: $default-color;
 	border-radius: 35px;
 	font-size: 20px;
 	font-weight: 600;
 	column-gap: 15px;
 	box-shadow: 0px 5px 25px 5px rgba(189, 227, 239, 0.6);
 	cursor: pointer;
+	transition: all $transitionTime;
+
+	&:hover {
+		transform: scale(1.1);
+		color: #a165f4;
+		background: linear-gradient(237deg,#a165f4,#8c84f9 100%);
+		color: $default-color;
+		border: 1px solid #917df8;
+	}
+
+	&:hover > .details-arrow path{
+		fill: $default-color;
+	}
 }
 .details-arrow {
 	color: #7048e2;
@@ -185,4 +256,5 @@ h3.sale {
 }
 .details-arrow path {
 	fill: #7048e2;
+	transition: all $transitionTime;
 }
