--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -6,6 +6,8 @@
 @import "blocks/header";
 @import "blocks/footer";
 @import "blocks/social";
+@import "utils/animations";
+@import "utils/decor-pospions";
 
 html {
   line-height: $mainLineHeight;
@@ -64,18 +66,22 @@ ul, li {
 //////////////////////////
 
 .trend {
-  width: 1380px;
+  position: relative;
+  width: (1380 / 1600 * 100%);
+  margin-top: 30px;
   padding: 75px 100px 140px;
-  background: #ffffff;
-  box-shadow: 5px 5px 50px 5px rgba(237, 235, 253, 0.75);
+  background: $default-color;
+  box-shadow: 0px 5px 50px 3px rgba(237, 235, 253, 0.75);
   display: flex;
   flex-direction: column;
   align-items: center;
   row-gap: 65px;
 }
+
 .trend-title {
   font-size: 50px;
   max-width: 900px;
+  z-index: 2;
   .title {
     font-weight: 700;
     color: #333333;
@@ -84,9 +90,15 @@ ul, li {
 }
 .trend-content {
   width: 100%;
+  //display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 6%;
+}
+.trend-content-bags {
+  width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 60px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 6%;
 }
 
 /////////////////////
@@ -99,29 +111,30 @@ ul, li {
   align-items: center;
   justify-content: space-between;
   padding: 56px 30px;
+  row-gap: 15px;
   position: relative;
-  transition: all .2s;
+  transition: all $transitionTime;
 
   &:hover {
-    box-shadow: 5px 5px 50px 5px rgba(202, 236, 247, 0.7);
+    box-shadow: 0px 5px 48px 3px rgba(202, 236, 247, 0.7);
     padding-bottom: 66px;
     padding-top: 46px;
   }
+  
   &:hover>button, &:hover>.likes, &:hover>.commits {
     opacity: 1;
-    transition: all .2s;
+    transition: all $transitionTime;
   }
   &:hover>.product-price {
     color: #8c84f9;
   }
 }
 .product-img {
-  width: 245px;
-  height: 245px;
+  width: (245 / 353.33 * 100%);
+  display: flex;
+  justify-content: center;
 
   img {
-    width: inherit;
-    height: inherit;
     object-fit: contain;
   }
 }
@@ -150,7 +163,7 @@ ul, li {
   text-overflow: ellipsis;
   white-space: nowrap;
   font-size: 20px;
-  color: #ffffff;
+  color: $default-color;
   background: linear-gradient(64deg, rgb(140, 132, 249), rgb(161, 101, 244) 100%);
   bottom: -30px;
   cursor: pointer;
@@ -160,6 +173,7 @@ ul, li {
 .content-wrapper {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 .likes {
   position: absolute;
@@ -206,18 +220,17 @@ ul, li {
 
 #presentation {
   width: 100%;
+  position: relative;
 
   .container {
-    padding: 40px 0 75px 40px;
+    padding: 32px 0 40px 40px;
     position: relative;
+    left: 0;
   }
 }
 
 .presentation-container {
   display: flex;
-  //grid-template-areas: "title img" "desc img";
-  //grid-template-columns: 45% 53%;
-  grid-column-gap: 2%;
 }
 .presentation-desc {
   width: 42%;
@@ -226,52 +239,39 @@ ul, li {
   justify-content: center;
   align-items: flex-start;
   row-gap: 20px;
-  //margin-bottom: 35px;
 }
 
-.presentation-title h3 {
+.presentation-title h2 {
   font-size: 50px;
   line-height: 1;
   font-weight: 700;
   color: #333333;
-  //grid-area: title;
 }
 .brand-title {
 
-  h4 {
+  h3 {
     font-size: 25px;
     line-height: 34px;
-    //line-height: 1;
     color: #333333;
   }
   a {
     color: #8d83f9;
   }
-  //grid-area: desc;
 }
 .brand-desc {
   color: #888888;
   font-size: 16px;
   line-height: 26px;
   text-align: left;
-  //margin-top: 20px;
-  //padding: 25px 0;
 }
 
 .presentation-img {
-  width: 53%;
+  width: 55%;
   position: relative;
   min-height: 750px;
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  //margin-top: 56px;
-
-  img {
-    //box-shadow: -5px 25px 25px 10px rgba(68, 77, 84, 0.2);
-  }
-
-  //grid-area: img;
 }
 
 .bg-img {
@@ -280,7 +280,7 @@ ul, li {
   background: url("../../../src/assets/img/phone.png");
   background-repeat: no-repeat;
   position: absolute;
-  left: 145px;
+  left: 170px;
   top: 75px;
 }
 
@@ -302,10 +302,12 @@ ul, li {
 
 #trendly-watch {
   row-gap: 0;
-  padding-bottom: 75px;
+  padding-bottom: 100px;
+  position: relative;
 
   .trend-content {
     margin-top: 60px;
+
   }
 
   .product-img {
@@ -318,51 +320,66 @@ ul, li {
   width: 100%;
   margin-top: 87px;
   max-width: 1100px;
-  height: 65px;
+  min-height: 65px;
   border-radius: 35px;
-  box-shadow: 0px 0px 95px 50px rgba(239, 239, 240, 0.75);
+  box-shadow: 0px 5px 47.5px 2.5px rgba(239, 239, 240, 0.75);
   display: flex;
-  //justify-content: space-around;
   align-items: center;
+  justify-content: center;
 }
 
 .showcase-list {
-  width: 100%;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  width: 85%;
+  min-height: 65px;
+  display: grid;
+  grid-template-columns: repeat(6 , auto);
+  //justify-content: space-evenly;
+  //align-items: center;
 }
-.showcase-item a {
+.showcase-item {
+  margin: 0 4px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  height: 100%;
   font-family: "Open Sans";
   font-size: 15px;
   font-weight: 600;
   color: #000000;
-  padding: 15px 15px;
-  transition: all .2s;
+
+  transition: all $transitionTime;
 
   &:hover {
     color: #b394fa;
   }
 
   &.active {
+    cursor: default;
     color: #b394fa;
-    font-size: 20px;
-    text-shadow:-1px 9px 5px #d5c8f7;
-    //opacity: 1.2;
+    transform: scale(1.3);
+    text-shadow: -1px 9px 5px #d5c8f7;
   }
 }
 
 
-
-
-//.container {
-//  @media screen and (max-width: $tableWidth) {
-//    //max-width: $phoneWidth;
-//  }
-//  @media screen and (max-width: $phoneWidth) {
-//    //max-width: $smPhoneWidth;
-//  }
+//.fashion {
+//  display: none;
+//}
+//.furnitures {
+//  display: none;
+//}
+//.mobile {
+//  display: none;
+//}
+//.cloth {
+//  display: none;
+//}
+//.toys {
+//  display: none;
 //}
 
-// Modules
-// @import "modules/my-module.scss";
+
+
+
