--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -35,3 +35,10 @@ $border-base             : #DCDFE6;
 $border-light            : #E4E7ED;
 $border-lighter          : #EBEEF5;
 $border-lightex          : #F2F6FC;
+
+// Time
+$transitionTime          : 0.1s;
+$animationTime           :.2s;
+
+// Other
+$hiddenDisplay           :none;
