доработано переключение категорий товаров, доработан код выпадающего меню

--- a/src/pug/includes/modules/header.pug
+++ b/src/pug/includes/modules/header.pug
@@ -2,16 +2,16 @@
 
 header
   div.bg-image
-    img(src="../assets/img/face.png")
+    img(src="/assets/img/face.png")
   .background
     //div.bg-image
-    //  img(src="../assets/img/face.png")
+    //  img(src="/assets/img/face.png")
     div.bg-gradient
     div.bg-effects
-      img(src="../assets/img/gradient-effect.png")
+      img(src="/assets/img/gradient-effect.png")
     .bg-ring.decor
     .bg-quad.decor
-      //img(src="../assets/img/quad-shape.png")
+      //img(src="/assets/img/quad-shape.png")
   .container
     .header-container
       .header-logo-row
@@ -20,7 +20,7 @@ header
         .buttons
           .header-button
             form(action="" method="post" target="_blank").source
-              input(type="image" src="../assets/img/search-icon.png").src-icon
+              input(type="image" src="/assets/img/search-icon.png").src-icon
               input(type="search", placeholder="Search").button-src
             button.button-collection
               .collection-desc Collection
