--- a/src/assets/scss/blocks/footer.scss
+++ b/src/assets/scss/blocks/footer.scss
@@ -11,7 +11,7 @@
 
 .newsletter {
 	width:  100%;
-	height: 420px;
+	height: 415px;
 	position: relative;
 
 
@@ -27,11 +27,12 @@
 .newsletter-content {
 	width: 100%;
 	height: 100%;
+	padding: 80px;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: center;
-	row-gap: 85px;
+	row-gap: 70px;
 }
 .newsletter-title {
 	position: relative;
@@ -40,7 +41,7 @@
 
 	.title {
 		font-size: 50px;
-		font-weight: 600;
+		font-weight: bold;
 		color: $default-color;
 		text-align: center;
 		max-width: 1100px;
@@ -48,12 +49,13 @@
 		white-space: nowrap;
 	}
 	.back-title {
+		font-family: "Roboto";
 		width: 100%;
 		font-size: 150px;
 		line-height: 100%;
 		font-weight: 900;
 		color: $default-color;
-		opacity: 0.1;
+		opacity: 0.04;
 		position: absolute;
 		text-align: center;
 		top: -50%;
@@ -112,15 +114,15 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	row-gap: 50px;
-	padding-top: 75px;
-	padding-bottom: 50px;
+	row-gap: 27px;
+	padding: 63px 0 51px;
+	//padding-bottom: 50px;
 }
 .categories-list {
 	display: flex;
 	justify-content: center;
 	align-items:center;
-	column-gap: 50px;
+	column-gap: 25px;
 }
 .categories-item {
 	padding: 10px;
@@ -148,6 +150,9 @@
 	}
 }
 
+.social-media {
+	margin-top: 10px;
+}
 /////////////////////////
 //       Copyright     //
 /////////////////////////
