--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -120,7 +120,7 @@ ul, li {
     padding-bottom: 66px;
     padding-top: 46px;
   }
-  
+
   &:hover>button, &:hover>.likes, &:hover>.commits {
     opacity: 1;
     transition: all $transitionTime;
@@ -277,7 +277,7 @@ ul, li {
 .bg-img {
   width: 370px;
   height: 705px;
-  background: url("../../../src/assets/img/phone.png");
+  background: url("/assets/img/phone.png");
   background-repeat: no-repeat;
   position: absolute;
   left: 170px;
@@ -287,7 +287,7 @@ ul, li {
 .bg-circle {
   width: 402px;
   height: 402px;
-  background: url("../../../src/assets/img/circle.png");
+  background: url("/assets/img/circle.png");
   background-repeat: no-repeat;
   background-size: contain;
   position: absolute;
