--- a/src/assets/scss/utils/decor-pospions.scss
+++ b/src/assets/scss/utils/decor-pospions.scss
@@ -6,13 +6,13 @@
 	position: absolute;
 	width: 26px;
 	height: 26px;
-	background: url("../../../src/assets/img/white-ring.png");
+	background: url("/assets/img/white-ring.png");
 	top: (181 / 994 * 100%);
 	left: (843 / 1600 * 100%);
 }
 .bg-quad {
 	position: absolute;
-	background: url("../../../src/assets/img/quad-shape.png");
+	background: url("/assets/img/quad-shape.png");
 	width: 41px;
 	height: 41px;
 	top: (739 / 994 * 100%);
@@ -27,7 +27,7 @@
 	position: absolute;
 	width: 109px;
 	height: 108px;
-	background: url("../../../src/assets/img/triangle-shape.png");
+	background: url("/assets/img/triangle-shape.png");
 	background-repeat: no-repeat;
 	background-size: contain;
 	top: (81 / 1320.38 * 100%);
@@ -37,7 +37,7 @@
 	position: absolute;
 	width: 93px;
 	height: 147px;
-	background: url("../../../src/assets/img/green-line-shape.png");
+	background: url("/assets/img/green-line-shape.png");
 	background-repeat: no-repeat;
 	background-size: contain;
 	top: (48 / 1320.38 * 100%);
@@ -47,7 +47,7 @@
 	position: absolute;
 	width: 33px;
 	height: 60px;
-	background: url("../../../src/assets/img/violet-line-shape.png");
+	background: url("/assets/img/violet-line-shape.png");
 	background-repeat: no-repeat;
 	background-size: contain;
 	top: (48 / 1320.38 * 100%);
@@ -57,7 +57,7 @@
 	position: absolute;
 	width: 144px;
 	height: 144px;
-	background: url("../../../src/assets/img/violet-medium-ring.png");
+	background: url("/assets/img/violet-medium-ring.png");
 	background-repeat: no-repeat;
 	background-size: contain;
 	top: (383 / 1320.38 * 100%);
@@ -68,7 +68,7 @@
 	position: absolute;
 	width: 109px;
 	height: 109px;
-	background: url("../../../src/assets/img/violet-quad-shape.png");
+	background: url("/assets/img/violet-quad-shape.png");
 	background-repeat: no-repeat;
 	background-size: contain;
 	top: (466 / 1320.38 * 100%);
@@ -78,7 +78,7 @@
 	position: absolute;
 	width: 88px;
 	height: 88px;
-	background: url("../../../src/assets/img/violet-quad-large.png");
+	background: url("/assets/img/violet-quad-large.png");
 	background-repeat: no-repeat;
 	background-size: contain;
 	top: (1100 / 1320.38 * 100%);
@@ -89,7 +89,7 @@
 	position: absolute;
 	width: 91px;
 	height: 91px;
-	background: url("../../../src/assets/img/triangle-light-shape.png");
+	background: url("/assets/img/triangle-light-shape.png");
 	background-repeat: no-repeat;
 	background-size: contain;
 	top: (1131 / 1320.38 * 100%);
@@ -106,7 +106,7 @@
 		position: absolute;
 		width: 33px;
 		height: 60px;
-		background: url("../../../src/assets/img/violet-line-shape.png");
+		background: url("/assets/img/violet-line-shape.png");
 		background-repeat: no-repeat;
 		background-size: contain;
 		top: (477 / 822 * 100%);
@@ -118,7 +118,7 @@
 	position: absolute;
 	width: 63px;
 	height: 101px;
-	background: url("../../../src/assets/img/blue-line-shape.png");
+	background: url("/assets/img/blue-line-shape.png");
 	background-repeat: no-repeat;
 	background-size: contain;
 	top: (234 / 822 * 100%);
@@ -130,7 +130,7 @@
 	position: absolute;
 	width: 95px;
 	height: 95px;
-	background: url("../../../src/assets/img/triangle-light.png");
+	background: url("/assets/img/triangle-light.png");
 	background-repeat: no-repeat;
 	background-size: contain;
 	top: (703 / 822 * 100%);
@@ -146,7 +146,7 @@
 		position: absolute;
 		width: 117px;
 		height: 117px;
-		background: url("../../../src/assets/img/triangle-light-shape-show.png");
+		background: url("/assets/img/triangle-light-shape-show.png");
 		background-repeat: no-repeat;
 		background-size: contain;
 		top: (40 / 1352.38 * 100%);
@@ -157,7 +157,7 @@
 		position: absolute;
 		width: 87px;
 		height: 139px;
-		background: url("../../../src/assets/img/yellow-line-shape.png");
+		background: url("/assets/img/yellow-line-shape.png");
 		background-repeat: no-repeat;
 		background-size: contain;
 		top: (48 / 1352.38 * 100%);
@@ -169,7 +169,7 @@
 	position: absolute;
 	width: 34px;
 	height: 34px;
-	background: url("../../../src/assets/img/violet-quad-light.png");
+	background: url("/assets/img/violet-quad-light.png");
 	background-repeat: no-repeat;
 	background-size: contain;
 	top: (476 / 1352.38 * 100%);
@@ -179,7 +179,7 @@
 	position: absolute;
 	width: 115px;
 	height: 115px;
-	background: url("../../../src/assets/img/triangle-small-shape.png");
+	background: url("/assets/img/triangle-small-shape.png");
 	background-repeat: no-repeat;
 	background-size: contain;
 	top: (868 / 1352.38 * 100%);
@@ -189,7 +189,7 @@
 	position: absolute;
 	width: 104px;
 	height: 104px;
-	background: url("../../../src/assets/img/violet-small-ring.png");
+	background: url("/assets/img/violet-small-ring.png");
 	background-repeat: no-repeat;
 	background-size: contain;
 	top: (250 / 1352.38 * 100%);
